# angelus

./: .gitignore  FELL_NOTES.md  INTEGRATION_FELL_CHANNEL_UNHEALTHY.md  INTEGRATION_FELL_RISK5.md  README.md  pyproject.toml
angelus/: __init__.py  cli.py  clock.py  control.py  daemon.py  envfile.py  faults.py  logging_config.py  sim.py
belfry/: belfry.py  crontab.example  healthchecks.example
deploy/: angelus.service  boots-watchdog.sh  sre_runner.py
docs/: logging.md
migrations/: 0001_initial_v3_1.sql  0002_observation_triage.sql  0003_trust_retry_recovery.sql  0004_daily_digest.sql  0005_mutes_and_close_comment.sql  0006_dependency_registry.sql  0007_digest_channel_attempts.sql  0008_pipe_sla.sql  0009_fixer_attempts.sql  0010_immediate_channel_attempts.sql  0011_dead_letter.sql  0012_watch_state.sql  0013_triage_count_and_ready_indexes.sql  0014_source_sla.sql  0015_observation_consumed.sql
state/: angelus.env.example
tests/: test_b11_fixer_registry.py  test_b13_immediate_channel_escalation.py  test_b13_transport_failover.py  test_b14_dead_letter_durability.py  test_b14_escalation_ladder.py  test_b15_dead_letter.py  test_b16_env_file.py  test_b18_fail_loud_env.py  test_b21b22_logging.py  test_b23_timeline.py  test_b24_clock_seam.py  test_b25_drain_fire_ops.py  test_b26_sim_harness.py  test_b28_fault_injection.py  test_b2_delivery_sla.py  test_b30_emission_gate.py  test_b5_health_delivery.py  test_b7_internal_fan.py  test_belfry.py  test_change_detection.py  test_control_timeout.py  test_entities_watch.py  test_fixer_actions_digest.py  test_gh_handlers.py  (+21 more)
(+48 files in other folders)
